@@ -25,12 +25,6 @@
 #include "motion.hh"
 
 /* **********************************************************************
- * The global game 
- * *********************************************************************/
-
-TGame * Game;
-
-/* **********************************************************************
  * The constructor currently constructs a single entity
  * *********************************************************************/
 TGame::TGame() {
