@@ -1,3 +1,10 @@
+2001-10-15  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>
+
+	* Structure
+	Moved some stuff around in preparation for having the
+	client control the "session" more. 
+	Loads a default map.
+
 2001-10-13  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>
 
 	* GameTime
